src/renderer/src/index.css
@layer theme, base, antd, components, utilities;

@import '../assets/fonts.css';
@import 'tailwindcss';

@plugin '@tailwindcss/typography';
@plugin '../HeroUiConfig.ts';

@source '../../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
@custom-variant dark (&:is(.dark *));

@theme {
  --font-JetBrainsMono: JetBrainsMono, sans-serif;
  --font-Nunito: Nunito, sans-serif;

  --color-LynxOrange: #ff5f00;
  --color-LynxNearBlack: #191919;
  --color-LynxRaisinBlack: #212121;

  --color-LynxWhiteSecond: #f6f6f6;
  --color-LynxWhiteThird: #ececec;
  --color-LynxWhiteFourth: #e1e1e1;
  --color-LynxWhiteFifth: #d0d0d0;

  --color-DarkGray: #424242;

  --animate-shine: shine 5s linear infinite;

  @keyframes shine {
    0% {
      background-position: 100%;
    }
    100% {
      background-position: -100%;
    }
  }
}

:root {
  color-scheme: light dark;
  background-color: #212121;
  font-family: Nunito, sans-serif;

  --uninstalled-card-bg-color: #ededed;
  --accent-bg-color: #212121;
  --xterm-scrollbar-thumb-color: rgba(0, 0, 0, 0.1);
}

* {
  -webkit-user-select: none;
  -webkit-user-drag: none;
  font-family: Nunito, sans-serif;
}

.dark {
  --uninstalled-card-bg-color: #303030;
  --xterm-scrollbar-thumb-color: rgba(255, 255, 255, 0.1);
}

.bg-uninstalled {
  background: radial-gradient(circle at 50% 30%, var(--uninstalled-card-bg-color), transparent 70%);
}

.bg-installed {
  background: radial-gradient(circle at 50% 30%, var(--accent-bg-color), transparent 70%);
}

.xterm-viewport::-webkit-scrollbar {
  width: 5px;
}

.xterm-viewport::-webkit-scrollbar-thumb {
  background: var(--xterm-scrollbar-thumb-color);
  border-radius: 10px;
}

.draggable {
  -webkit-user-select: none;
  -webkit-app-region: drag;
}

.notDraggable {
  -webkit-app-region: no-drag;
}

